add database initilizer